fix: bug with doc-page__controls and refactor useVisibility

--- a/src/components/DocPage/DocPage.scss
+++ b/src/components/DocPage/DocPage.scss
@@ -128,6 +128,10 @@ $importantBackgroundColor: rgba(235, 50, 38, 0.08);
             }
         }
 
+        @media (max-width: map-get($screenBreakpoints, 'md') - 1) {
+            display: none;
+        }
+
         @media (min-width: map-get($screenBreakpoints, 'md')) {
             &_vertical {
                 top: calc(6px + var(--dc-header-height, #{$headerHeight}));
@@ -195,12 +199,12 @@ $importantBackgroundColor: rgba(235, 50, 38, 0.08);
     }
 
     &__title {
-        margin-bottom: 12px;
+        margin-top: 20px;
 
         @include text-size(display-2);
 
         @media (min-width: map-get($screenBreakpoints, 'md')) {
-            margin-top: 0;
+            margin-top: 0px;
             margin-bottom: 12px;
         }
     }
@@ -385,7 +389,7 @@ $importantBackgroundColor: rgba(235, 50, 38, 0.08);
     }
 
     & > p {
-        margin: 0 0 10px 0;
+        margin: 0 0 10px;
 
         &:first-child {
             &::before {
@@ -406,10 +410,10 @@ $importantBackgroundColor: rgba(235, 50, 38, 0.08);
     }
 
     $colors: (
-            dc-accent-info: $infoColor,
-            dc-accent-tip: $tipColor,
-            dc-accent-alert: $importantColor,
-            dc-accent-warning: $warningColor
+        dc-accent-info: $infoColor,
+        dc-accent-tip: $tipColor,
+        dc-accent-alert: $importantColor,
+        dc-accent-warning: $warningColor,
     );
 
     @each $type, $color in $colors {
@@ -423,10 +427,10 @@ $importantBackgroundColor: rgba(235, 50, 38, 0.08);
     }
 
     $backgroundColors: (
-            dc-accent-info: $infoBackgroundColor,
-            dc-accent-tip: $tipBackgroundColor,
-            dc-accent-alert: $importantBackgroundColor,
-            dc-accent-warning: $warningBackgroundColor
+        dc-accent-info: $infoBackgroundColor,
+        dc-accent-tip: $tipBackgroundColor,
+        dc-accent-alert: $importantBackgroundColor,
+        dc-accent-warning: $warningBackgroundColor,
     );
 
     @each $type, $color in $backgroundColors {
